frontend/tests/cases/positive/interfaces/simple/interface-simple-21.gr
interface Simple a where
  simple : a -> a

data A = B | C

-- instance with pattern matching
instance Simple A where
  simple B = B;
  simple C = C
